Commit: Work on UI

--- a/src/locales/resources/english.json
+++ b/src/locales/resources/english.json
@@ -1,1 +1,42 @@
-{}
+{
+    "marqueeText": "WIN22 doesn’t only offer you the opportunity to play your favorite online gambling games using your web browser but offers you to play the games using the mobile app. This is an easy approach brought by us to the users in order for them to easily access various services offered in the platform. Be it that you are a user of an Android or iOS mobile device, this application will be compatible for any devices.",
+    "trustedOnlineCasinoMalaysia": "TRUSTED ONLINE CASINO MALAYSIA - WIN22",
+    "aboutUsDesc": "WIN22 is trusted Malaysia online casino, the geographical region of Asia having a customer base of over a million users. We can not only play games in various well-known game companies, but also provide fast cash withdrawal services.",
+    "sponsored": "SPONSORED",
+    "usefulInformation": "USEFUL INFORMATION",
+    "mobileApp": "Mobile App",
+    "infoContent1": "WIN22 doesn’t only offer you the opportunity to play your favorite online gambling games using your web browser but offers you to play the games using the mobile app. This is an easy approach brought by us to the users in order for them to easily access various services offered in the platform. Be it that you are a user of an Android or iOS mobile device, this application will be compatible for any devices.",
+    "securityAndSafety": "Security And Safety",
+    "infoContent2": "Our players are safe and secure using the online casino platform and the mobile app. We featured a two-factor authenticated feature as well as 128-encrypted features that are safe from any hacking activist. We have acquired multiple online gambling licenses from international gambling corporations such as Gaming Curacao, which is an authority that provides legal casino licenses. Hence, our players may rest assured that online casino is legal and legit.",
+    "paymentMethod": "Payment Method",
+    "infoContent3": "When it comes to transacting on our platform, you are rest assured of a swift and secured delivery of the deposits and withdrawals. The transaction can be done at any given time of the day with no restriction or limitation to public holidays. The methods of deposit accepted on this trusted online gambling site are Online Banking, E-Wallet and Telco with no additional charges are incurred with all transactions being completed quickly within a day.",
+    "typesOfTheBestOnlineCasinoGames": "TYPES OF THE BEST ONLINE CASINO GAMES",
+    "latestHighlightVideo": "Latest Highlight Video",
+    "recommended": "Recommended",
+    "downloadApp": "DOWNLOAD WIN22 APP",
+    "contactUs": "Contact Us",
+    "product": "Products",
+    "info": "Info",
+    "language": "Language",
+    "termsAndConditions": "Terms & Conditions",
+    "faq": "FAQ",
+    "depositMethod": "Deposit Method",
+    "onlineBanking": "Online Banking",
+    "eWallet": "E-Wallet",
+    "telco": "Telco",
+
+    "home": "HOME",
+    "lottery": "LOTTERY",
+    "slot": "SLOT",
+    "sport": "SPORT BOOK",
+    "live": "CASINO",
+    "suggestion": "SUGGESTION",
+
+    "myProfile": "My Profile",
+    "changePassword": "Change Password",
+    "deposit": "Deposit",
+    "withdraw": "Withdrawal",
+    "transactionHistory": "Transaction History",
+    "gameAccount": "Game Account",
+    "logOut": "Logout"
+}
