--- a/src/locales/resources/english.json
+++ b/src/locales/resources/english.json
@@ -1,42 +1,154 @@
 {
-    "marqueeText": "WIN22 doesn’t only offer you the opportunity to play your favorite online gambling games using your web browser but offers you to play the games using the mobile app. This is an easy approach brought by us to the users in order for them to easily access various services offered in the platform. Be it that you are a user of an Android or iOS mobile device, this application will be compatible for any devices.",
-    "trustedOnlineCasinoMalaysia": "TRUSTED ONLINE CASINO MALAYSIA - WIN22",
-    "aboutUsDesc": "WIN22 is trusted Malaysia online casino, the geographical region of Asia having a customer base of over a million users. We can not only play games in various well-known game companies, but also provide fast cash withdrawal services.",
+    "withdrawAllBalance": "Withdraw All Balance",
+    "settings": "Settings",
+
+    "english": "ENGLISH",
+    "mandarin": "MANDARIN",
+    "bahasa": "BAHASA",
+
+    "login": "LOGIN",
+    "language": "Language",
+
+    "home": "HOME",
+    "slot": "SLOT",
+    "casino": "CASINO",
+    "sportbook": "SPORT BOOK",
+    "lottery": "LOTTERY",
+    "fishing": "FISHING",
+    "esport": "E-SPORT",
+    "series918": "SERIES 918",
+    "suggestion": "SUGGESTION",
+
+    "contactUs": "Contact Us",
+    "telegram": "Telegram: ",
+    "whatsapp": "WhatsApp: ",
+    "product": "Products",
+    "info": "Info",
+    "termsAndConditions": "Terms & Conditions",
+    "faq": "FAQ",
+    "depositMethod": "Deposit Method",
+
+    "playerID": "Player ID",
+    "pleaseInsertPlayerID": "Please insert player ID",
+    "password": "Password",
+    "pleaseInsertPassword": "Please insert password",
+
+    "loginSuccess": "LOGIN SUCCESS",
+    "loginSuccessMsg": "Welcome to {{domainName}}",
+    "close": "CLOSE",
+
+    "marqueeText": "{{domainName}} doesn't only offer you the opportunity to play your favorite online gambling games using your web browser but offers you to play the games using the mobile app. This is an easy approach brought by us to the users in order for them to easily access various services offered in the platform. Be it that you are a user of an Android or iOS mobile device, this application will be compatible for any devices.",
+
+    "trustedOnlineCasinoMalaysia": "TRUSTED ONLINE CASINO MALAYSIA - {{domainName}}",
+    "aboutUsDesc": "{{domainName}} is trusted Malaysia online casino, the geographical region of Asia having a customer base of over a million users. We can not only play games in various well-known game companies, but also provide fast cash withdrawal services.",
+
     "sponsored": "SPONSORED",
+
     "usefulInformation": "USEFUL INFORMATION",
     "mobileApp": "Mobile App",
-    "infoContent1": "WIN22 doesn’t only offer you the opportunity to play your favorite online gambling games using your web browser but offers you to play the games using the mobile app. This is an easy approach brought by us to the users in order for them to easily access various services offered in the platform. Be it that you are a user of an Android or iOS mobile device, this application will be compatible for any devices.",
+    "infoContent1": "{{domainName}} doesn't only offer you the opportunity to play your favorite online gambling games using your web browser but offers you to play the games using the mobile app. This is an easy approach brought by us to the users in order for them to easily access various services offered in the platform. Be it that you are a user of an Android or iOS mobile device, this application will be compatible for any devices.",
     "securityAndSafety": "Security And Safety",
     "infoContent2": "Our players are safe and secure using the online casino platform and the mobile app. We featured a two-factor authenticated feature as well as 128-encrypted features that are safe from any hacking activist. We have acquired multiple online gambling licenses from international gambling corporations such as Gaming Curacao, which is an authority that provides legal casino licenses. Hence, our players may rest assured that online casino is legal and legit.",
     "paymentMethod": "Payment Method",
     "infoContent3": "When it comes to transacting on our platform, you are rest assured of a swift and secured delivery of the deposits and withdrawals. The transaction can be done at any given time of the day with no restriction or limitation to public holidays. The methods of deposit accepted on this trusted online gambling site are Online Banking, E-Wallet and Telco with no additional charges are incurred with all transactions being completed quickly within a day.",
+
     "typesOfTheBestOnlineCasinoGames": "TYPES OF THE BEST ONLINE CASINO GAMES",
+
     "latestHighlightVideo": "Latest Highlight Video",
     "recommended": "Recommended",
-    "downloadApp": "DOWNLOAD WIN22 APP",
-    "contactUs": "Contact Us",
-    "product": "Products",
-    "info": "Info",
-    "language": "Language",
-    "termsAndConditions": "Terms & Conditions",
-    "faq": "FAQ",
-    "depositMethod": "Deposit Method",
-    "onlineBanking": "Online Banking",
-    "eWallet": "E-Wallet",
-    "telco": "Telco",
 
-    "home": "HOME",
-    "lottery": "LOTTERY",
-    "slot": "SLOT",
-    "sport": "SPORT BOOK",
-    "live": "CASINO",
-    "suggestion": "SUGGESTION",
+    "downloadApp": "DOWNLOAD {{domainName}} APP",
+
+    "suggestionType": "Suggestion Type",
+    "gameProblem": "Game Problem",
+    "dealerCheat": "Dealer Cheat",
+    "dealerComplaints": "Dealer Complaints",
+    "others": "Others",
+    "message": "Message",
+    "pleaseSelectSuggestionTypeAndInsertMessage": "Please select suggestion type and insert message",
 
     "myProfile": "My Profile",
     "changePassword": "Change Password",
+    "changeLanguage": "Change Language",
     "deposit": "Deposit",
-    "withdraw": "Withdrawal",
+    "withdraw": "Withdraw",
     "transactionHistory": "Transaction History",
     "gameAccount": "Game Account",
-    "logOut": "Logout"
+    "logOut": "Log Out",
+
+    "phoneNumber": "Phone Number",
+    "agentID": "Agent ID",
+    "registerDate": "Register Date",
+
+    "currentPassword": "Current Password",
+    "pleaseInsertCurrentPassword": "Please insert current password",
+    "newPassword": "New Password",
+    "pleaseInsertNewPassword": "Please insert new password",
+    "clear": "Clear",
+    "update": "Update",
+
+    "depositType": "Deposit Options",
+    "qrPay": "QR Pay",
+    "onlineBanking": "Online Banking",
+    "telco": "Telco",
+    "cdm": "Cash Deposit Machine",
+
+    "agentBank": "Agent Bank",
+    "pleaseSelectBank": "Please select bank",
+    "bankAccountNo": "Bank Account No",
+    "bankAccountName": "Bank Account Name",
+    "amount": "Amount",
+    "pleaseInsertAmount": "Please insert amount",
+    "provider": "Providers",
+    "pinNumber": "Pin Number",
+    "pleaseInsertPinNumber": "Please insert pin number",
+    "attachment": "Attachment",
+    "clickToUpload": "Click To Upload",
+    "pleaseUploadAttachment": "Please upload attachment",
+    "submit": "Submit",
+
+    "confirmToDepositBalance": "Confirm to deposit balance",
+    "pleaseSelectDepositType": "Please select deposit type",
+    "pleaseSelectTelcoProvider": "Please select telco provider",
+
+    "importantNotice": "Important Notice :",
+    "depositDesc1": "Be sure to check the current latest deposit account before making a deposit to avoid a slow process.",
+    "depositDesc2": "When transferring funds, please refer to the 'Bank Reference Number' 'Recipient Reference/Others Payment Details'",
+    "depositDesc3": "Please do not fill in any sensitive information when transferring funds, such as the following GAMBLING, GAME, CASINO and etc.",
+    "depositDesc4": "Please confirm the transfer is successful before submitting the deposit application to avoid deposit delay.",
+    "depositDesc5": "Please include a leaflet with every deposit application so that your request can be passed more quickly.",
+    "depositDesc6": "For cash deposit transactions, please write 'for {{domainName}} only' on the receipt with a pen each time, and then upload the receipt after submitting the application.",
+
+    "bankCode": "Bank Code",
+    "haventRegisterWithdrawalBankYet": "Haven't Registered Withdrawal Bank Account Yet !",
+    "confirmToWithdrawBalance": "Confirm to withdraw balance",
+
+    "addBankDesc1": "Don't Have Your Own Withdrawal Bank Yet ?",
+    "addBankDesc2": "Want To Add Another Withdrawal Bank ?",
+    "addBank": "Add Bank",
+    "addNewBank": "Add New Bank",
+    "pleaseSelectBankCode": "Please select bank code",
+    "pleaseInsertBankAccountName": "Please insert bank account name",
+    "pleaseInsertBankAccountNo": "Please insert bank account no",
+    "confirmToAddBank": "Confirm to add bank",
+
+    "action": "Action",
+    "beforeBalance": "Before Balance",
+    "afterBalance": "After Balance",
+    "remark": "Remark",
+    "createDate": "Create Date",
+
+    "gameName": "Game Name",
+    "gameLoginID": "Game Login ID",
+    "gamePassword": "Game Password",
+    "balance": "Balance",
+    "checkBalance": "Check Balance",
+    "transferToWallet": "Transfer To Wallet",
+    "noCreditInsideGame": "No credit inside game",
+
+    "gameUnderMaintenance": "Game Under Maintenance",
+    "comingSoon": "Coming Soon",
+    "transferAndPlay": "Transfer And Play",
+    "confirmTransferMsg": "Once transfer cannot withdraw from game",
+    "redirectToGameNow": "Redirect To Game Now"
 }
