--- a/src/locales/resources/malay.json
+++ b/src/locales/resources/malay.json
@@ -150,5 +150,7 @@
     "comingSoon": "Akan Datang",
     "transferAndPlay": "Pindah dan Main",
     "confirmTransferMsg": "Sekali dipindah tidak boleh dikeluarkan dari permainan",
-    "redirectToGameNow": "Alihkan ke Permainan Sekarang"
+    "redirectToGameNow": "Alihkan ke Permainan Sekarang",
+
+    "downloadGame": "Teruskan dengan muatturun aplikasi"
 }
