--- a/src/locales/resources/english.json
+++ b/src/locales/resources/english.json
@@ -11,8 +11,8 @@
 
     "home": "HOME",
     "slot": "SLOT",
-    "casino": "CASINO",
-    "sportbook": "SPORT BOOK",
+    "live": "CASINO",
+    "sport": "SPORT",
     "lottery": "LOTTERY",
     "fishing": "FISHING",
     "esport": "E-SPORT",
