--- a/src/locales/resources/malay.json
+++ b/src/locales/resources/malay.json
@@ -11,8 +11,8 @@
 
     "home": "LAMAN UTAMA",
     "slot": "MESIN SLOT",
-    "casino": "KASINO",
-    "sportbook": "BUKU SUKAN",
+    "live": "KASINO",
+    "sport": "SUKAN",
     "lottery": "LOTERI",
     "fishing": "MEMANCING",
     "esport": "E-SPORT",
