--- a/src/locales/resources/mandarin.json
+++ b/src/locales/resources/mandarin.json
@@ -11,8 +11,8 @@
 
     "home": "首页",
     "slot": "老虎机",
-    "casino": "赌场",
-    "sportbook": "体育博彩",
+    "live": "赌场",
+    "sport": "体育博彩",
     "lottery": "彩票",
     "fishing": "捕鱼",
     "esport": "电子竞技",
