galaxy 0001 bo update api url

--- a/src/locales/resources/english.json
+++ b/src/locales/resources/english.json
@@ -171,5 +171,6 @@
     "confirmTransferMsg": "Once transfer cannot withdraw from game",
     "redirectToGameNow": "Redirect To Game Now",
 
-    "downloadGame": "Download the game to continue"
+    "downloadGame": "Download the game to continue",
+    "back":"Back"
 }
