--- a/src/locales/resources/mandarin.json
+++ b/src/locales/resources/mandarin.json
@@ -4,7 +4,7 @@
 
     "english": "英语",
     "mandarin": "普通话",
-    "bahasa": "马来语",
+    "burnese": "缅甸语",
 
     "login": "登录",
     "signUp": "注册",
