--- a/src/locales/resources/burnese.json
+++ b/src/locales/resources/burnese.json
@@ -172,5 +172,7 @@
 
     "downloadGame": "အက်ပ် ဒေါင်းလုပ်ဆွဲရန်ဆက်လက်လုပ်ဆောင်ပါ",
     "back": "နောက်သို့",
-    "confirmToExit": "ထွက်ရန် အတည်ပြုမည်လား?"
+    "confirmToExit": "ထွက်ရန် အတည်ပြုမည်လား?",
+    "wrongPassword": "ဆော့မယ့် ID သို့မဟုတ် လျှို့ဝှက်နံပါတ်မှားနေပါသည်",
+    "loginFailed": "ဝင်မရပါ"
 }
