--- a/src/locales/resources/burnese.json
+++ b/src/locales/resources/burnese.json
@@ -137,7 +137,7 @@
 
     "bankCode": "ဘဏ်ကုဒ်",
     "haventRegisterWithdrawalBankYet": "ထုတ်ယူမှုဘဏ်သုံးစွဲမှုအားမှတ်ပုံတင်ခြင်းမရှိသေးပါ!",
-    "confirmToWithdrawBalance": "ငွေထုတ်ယူမှုကိုအတည်ပြုပါ",
+    "confirmToWithdrawBalance": "လက်ကျန်ငွေပြန်လည်ရယူရန်အတည်ပြုပါ",
     "withdrawBalance": "အားလုံးထုတ်ယူပါ",
     "topup": "ငွေဖြည့်ပါ",
 
