--- a/src/locales/resources/english.json
+++ b/src/locales/resources/english.json
@@ -138,7 +138,7 @@
 
     "bankCode": "Bank Code",
     "haventRegisterWithdrawalBankYet": "Haven't Registered Withdrawal Bank Account Yet !",
-    "confirmToWithdrawBalance": "Confirm to withdraw balance",
+    "confirmToWithdrawBalance": "Confirm to pull back balance",
     "withdrawBalance": "withdraw All balance",
     "topup": "Top Up Balance",
 
