--- a/src/locales/resources/english.json
+++ b/src/locales/resources/english.json
@@ -1,5 +1,5 @@
 {
-    "withdrawAllBalance": "Withdraw All Balance",
+    "withdrawAllBalance": "Pullback All Balance",
     "settings": "Settings",
 
     "english": "ENGLISH",
